config-root/namespaces/jx-staging/twitter-angular-dashboard/twitter-angular-dashboard-twitter-angular-dashboard-deploy.yaml
# Source: twitter-angular-dashboard/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: twitter-angular-dashboard-twitter-angular-dashboard
  labels:
    draft: draft-app
    chart: "twitter-angular-dashboard-0.0.4"
    gitops.jenkins-x.io/pipeline: 'namespaces'
  annotations:
    meta.helm.sh/release-name: 'twitter-angular-dashboard'
    wave.pusher.com/update-on-config-change: 'true'
  namespace: jx-staging
spec:
  selector:
    matchLabels:
      app: twitter-angular-dashboard-twitter-angular-dashboard
  replicas: 1
  template:
    metadata:
      labels:
        draft: draft-app
        app: twitter-angular-dashboard-twitter-angular-dashboard
    spec:
      serviceAccountName: twitter-angular-dashboard-twitter-angular-dashboard
      containers:
        - name: twitter-angular-dashboard
          image: "gcr.io/compute-project-183119/twitter-angular-dashboard:0.0.4"
          imagePullPolicy: IfNotPresent
          envFrom: null
          ports:
            - name: http
              containerPort: 8080
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 500
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          resources:
            limits:
              cpu: 400m
              memory: 256Mi
            requests:
              cpu: 200m
              memory: 128Mi
      terminationGracePeriodSeconds:
      imagePullSecrets:
