config-root/namespaces/jx-staging/twitter-angular-dashboard/twitter-angular-dashboard-ingress.yaml
# Source: twitter-angular-dashboard/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    meta.helm.sh/release-name: 'twitter-angular-dashboard'
  name: twitter-angular-dashboard
  namespace: jx-staging
  labels:
    gitops.jenkins-x.io/pipeline: 'namespaces'
spec:
  rules:
    - http:
        paths:
          - pathType: ImplementationSpecific
            backend:
              service:
                name: twitter-angular-dashboard
                port:
                  number: 80
      host: twitter-angular-dashboard-jx-staging.34.132.47.65.nip.io
